--- a/src/Html/style.css
+++ b/src/Html/style.css
@@ -17,7 +17,15 @@
         height: 100px;
         border-radius: 50%;
     }
-
+.footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+    }
 
     .form-select {
         margin: 20px 0;
